--- a/Cash-Calculator/style.css
+++ b/Cash-Calculator/style.css
@@ -63,8 +63,7 @@ img{
 }
 
 input[type="number"]{
-
-    padding: 2px;
+    padding: 3px;
     width: 180px;
     border-radius: 2px;
     border: 1px solid #ccc;         
@@ -86,15 +85,16 @@ input[type="number"]::-webkit-inner-spin-button
 }
 
 .cash-text{
-    margin-left: 10px;
-    color: #fff;
+    font-weight: bold;
+    margin-left: 5px;
+    color: black;
     width: 40px;
     display: inline-block;
     text-align: center;
 }
 
 button{
-    margin-top: 7px;
+    margin-top: 2px;
     padding: 10px 20px;
     background-color: #ff7e5f;
     color: #fff;
