--- a/Random-HEX-Color-Generator/style.css
+++ b/Random-HEX-Color-Generator/style.css
@@ -13,6 +13,8 @@ h1{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    /* align-items: center; */
+    gap: 1rem;
 }
 
 .color-container{
